# newspeed

./: CMakeLists.txt  README.md
src/: apps.c  apps.h  apps_opt.c  apps_opt.h  newspeed.c  newspeed_config.h  newspeed_loop.c  newspeed_loop.h  newspeed_median.h  newspeed_ops.c  newspeed_ops.h  torben.c
